# training-app

./: .gitignore  README.md
api/: Cargo.toml
api/src/: firebase.rs  main.rs
api/src/features/auth/: mod.rs  register.rs  schemas.rs
api/src/https/: error.rs
api/src/https/requests/: auth-login.http  auth-register.http
web/: index.html  package.json  tsconfig.json
web/src/: App.tsx  globals.d.ts  main.tsx
web/src/components/FloatButton/: FloatButton.tsx
web/src/components/Nav/: Nav.tsx
web/src/firebase-sdk/: auth.ts  config.ts  firebase.ts  firestore.ts
web/src/layout/: Main.tsx
web/src/mods/: Nav.tsx
web/src/mods/context/: auth.tsx
web/src/pages/account/: Account.view.tsx
web/src/pages/auth/: Login.view.tsx  Register.view.tsx
web/src/pages/auth/components/: Card.tsx  PasswordInput.tsx  style.css
web/src/pages/workout/: Workout.view.tsx
